--- a/SIENI/SIENI-web/src/main/webapp/view/formato/portalConsultas/gestionConsultas/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/portalConsultas/gestionConsultas/index.xhtml
@@ -26,16 +26,16 @@
                                  rowsPerPageTemplate="5,10,15"
                                  reflow="true">
                         <p:column headerText="Usuario" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
-                            #{formatoPantallas.campo30}
+
                         </p:column>
                         <p:column headerText="Título" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
-                            #{formatoPantallas.campo100}
+
                         </p:column>
                         <p:column headerText="Estado" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
-                            #{formatoPantallas.campo15}
+
                         </p:column>
                         <p:column headerText="Curso" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
-                            #{formatoPantallas.campo100}
+
                         </p:column>
                         <p:column headerText="Acciones">
                             <i class="icon-chat75 Fs25 Red" style="cursor: pointer" title="Ver Consulta"></i>
@@ -55,26 +55,26 @@
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel value="Título: " class="Container10 Responsive"></p:outputLabel>
-                        <p:inputText  class="Container10 Responsive" value="#{formatoPantallas.campo100}"></p:inputText>
-                        <p:outputLabel  value="Estado: " class="Container10 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class="Container10 Responsive" value="#{archivosMultimediaForm.estado}">
-                            <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo15}"/>
+                        <p:outputLabel for="titulo" value="Título: " class="Container10 Responsive"></p:outputLabel>
+                        <p:inputText id="titulo" class="Container10 Responsive" value="#{archivosMultimediaForm.nombre}"></p:inputText>
+                        <p:outputLabel for="estado" value="Estado: " class="Container10 Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="estado" class="Container10 Responsive" value="#{archivosMultimediaForm.estado}">
+                            <f:selectItem itemValue ="1" itemLabel="Disponible"/>
                             <f:selectItem itemValue="0" itemLabel="No Disponible"/>
                         </p:selectOneMenu>
-                        <p:outputLabel  value="Curso: " class="Container10 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class="Container10 Responsive" value="#{archivosMultimediaForm.tipo}">
-                            <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo100}"/>
+                        <p:outputLabel for="curso" value="Curso: " class="Container10 Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="curso" class="Container10 Responsive" value="#{archivosMultimediaForm.tipo}">
+                            <f:selectItem itemValue ="0" itemLabel="Audio"/>
                             <f:selectItem itemValue ="1" itemLabel="Video"/>
                             <f:selectItem itemValue ="2" itemLabel="Imagen"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel value="Consulta: " class="Container10 Responsive"></p:outputLabel>
-                        <p:editor value="#{formatoPantallas.campo4000}" ></p:editor>
+                        <p:outputLabel for="consulta" value="Consulta: " class="Container10 Responsive"></p:outputLabel>
+                        <p:editor id="consulta"></p:editor>
                         <p:outputLabel value="Tipo de Archivo:"></p:outputLabel>
                         <p:selectOneMenu>
-                            <f:selectItem itemValue="-1" itemLabel="#{formatoPantallas.campo15}"></f:selectItem>
+                            <f:selectItem itemValue="-1" itemLabel="No adjuntar"></f:selectItem>
                             <f:selectItem itemValue="0" itemLabel="Audio"></f:selectItem>
                             <f:selectItem itemValue="1" itemLabel="Video"></f:selectItem>
                             <f:selectItem itemValue="2" itemLabel="Imagen"></f:selectItem>
@@ -107,40 +107,17 @@
                     </p:dialog>
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel value="Tema: #{formatoPantallas.campo100}" class="h2" ></p:outputLabel>
+                    <p:outputLabel value="Tema: Problema Ejercicio matemáticas" class="h2" ></p:outputLabel>
                     <p:separator></p:separator>
                     <div class="EmptyBox20"></div>
                     <div class="Container20">
                         <i class="icon-round58 Fs40"></i>
                         <div class="EmptyBox20"></div>
-                        <p:outputLabel value="Usuario: #{formatoPantallas.campo30} ,#{formatoPantallas.fechaHora}"></p:outputLabel>
+                        <p:outputLabel value="Usuario: Juan ,15/06/2015 04:00 pm"></p:outputLabel>
                     </div>
                     <div class="Container73">
                         <p:outputLabel value="Consulta" class="Container100">
                         </p:outputLabel>
-                        <div class="EmptyBox20"></div>
-                        <p:outputLabel value="#{formatoPantallas.campo4000}"></p:outputLabel>
-                        <div class="EmptyBox20"></div>
-                        <div class="Container73" style="cursor: pointer" >
-                            <i class="fa fa-file-movie-o Fs25"></i>
-                            <i class="fa fa-file-image-o Fs25"></i>
-                            <i class="fa fa-file-audio-o Fs25"></i>
-                        </div>
-                    </div>
-                    <div class="EmptyBox10"></div>
-                    <p:separator></p:separator>
-                    <div class="EmptyBox20"></div>
-                    <div class="Container20">
-                        <i class="icon-round58 Fs40"></i>
-                        <div class="EmptyBox20"></div>
-                        <p:outputLabel value="Usuario: #{formatoPantallas.campo30} ,#{formatoPantallas.fechaHora}"></p:outputLabel>
-                    </div>
-                    <div class="Container73">
-                        <p:outputLabel value="Respuesta" class="Container100">
-                        </p:outputLabel>
-                        <div class="EmptyBox20"></div>
-                        <p:outputLabel value="#{formatoPantallas.campo4000}"></p:outputLabel>
-                        <div class="EmptyBox20"></div>
                         <div class="Container73" style="cursor: pointer" >
                             <i class="fa fa-file-movie-o Fs25"></i>
                             <i class="fa fa-file-image-o Fs25"></i>
@@ -152,7 +129,7 @@
                     <div class="Container20">
                         <i class="icon-round58 Fs40"></i>
                         <div class="EmptyBox20"></div>
-                        <p:outputLabel value="Usuario: #{formatoPantallas.campo30} ,#{formatoPantallas.fechaHora}"></p:outputLabel>
+                        <p:outputLabel value="Usuario: Roberto ,15/06/2015 08:16 pm"></p:outputLabel>
                     </div>
                     <div class="Container73">
                         <p:editor></p:editor>
@@ -160,14 +137,13 @@
                     <div class="EmptyBox10"></div>
                     <p:outputLabel value="Tipo de Archivo:"></p:outputLabel>
                     <p:selectOneMenu>
-                        <f:selectItem itemValue="-1" itemLabel="#{formatoPantallas.campo15}"></f:selectItem>
+                        <f:selectItem itemValue="-1" itemLabel="No adjuntar"></f:selectItem>
                         <f:selectItem itemValue="0" itemLabel="Audio"></f:selectItem>
                         <f:selectItem itemValue="1" itemLabel="Video"></f:selectItem>
                         <f:selectItem itemValue="2" itemLabel="Imagen"></f:selectItem>
                     </p:selectOneMenu>
                     <div class="EmptyBox10"></div>
                     <p:outputLabel value="Archivo"></p:outputLabel>
-                    <div class="EmptyBox20"></div>
                     <p:fileUpload label="Buscar" cancelLabel="cancelar" uploadLabel="Subir archivo" multiple="false" mode="advanced" skinSimple="true" allowTypes="/(\.|\/)(jpg)$/" class="Container40 Responsive" value="#{archivosMultimediaForm.archivo}" >
                     </p:fileUpload> 
                     <div class="EmptyBox10"></div>
