--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/index.xhtml
@@ -7,14 +7,14 @@
     <ui:define name="breadCrumb">
         <p:breadCrumb>
             <p:menuitem value="Home" url="/"/>
-            <p:menuitem value="Administración de sistema" url="#"/>
-            <p:menuitem value="Mantenimiento de Usuarios" url="#{siteUrls.gestionUsuarios}"/>
+            <p:menuitem value="Gestionar Año Escolar" url="#"/>
+            <p:menuitem value="Matricula Alumnos" url="#{siteUrls.gestionAlumnos}"/>
             <p:separator />
         </p:breadCrumb>
     </ui:define>
     <ui:define name="content">
         <p:tabView>
-            <p:tab title="Consulta de Usuarios">
+            <p:tab title="Consulta de Matrícula de Alumnos">
                 <h:form>
                     <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
                         <p:outputLabel value="Esta ayuda sirve un monton"/>
@@ -25,55 +25,58 @@
                                  paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                  rowsPerPageTemplate="5,10,15"
                                  reflow="true">
-                        <p:column headerText="Usuario" filterBy="#{car.description}" filterMatchMode="contains" filterable="true">
-                            #{formatoPantallas.campo30}
-                        </p:column>
-                        <p:column headerText="Tipo de usuario" filterBy="#{car.description}" filterMatchMode="contains" filterable="true">
-                            #{formatoPantallas.campo30}
+                        <p:column headerText="Carnet" filterBy="#{car.description}" filterMatchMode="contains" filterable="true">
+                            #{formatoPantallas.carnet}
                         </p:column>
                         <p:column headerText="Nombre" filterBy="#{car.description}" filterMatchMode="contains" filterable="true">
                             #{formatoPantallas.campo300}
                         </p:column>
+                        <p:column headerText="Grado" filterBy="#{car.description}" filterMatchMode="contains" filterable="true">
+                            #{formatoPantallas.campo15}
+                        </p:column>
+                        <p:column headerText="Sección" filterBy="#{car.description}" filterMatchMode="contains" filterable="true">
+                            #{formatoPantallas.campo15}
+                        </p:column>
                         <p:column headerText="Acciones">
                             <!--                            <i class="icon-users Fs25 Red" style="cursor: pointer" title="Gestionar Docentes"></i>
                                                         <i class="icon-graduate32 Fs25 Red" style="cursor: pointer" title="Gestionar Alumnos"></i>-->
-                            <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Usuario"></i>
-                            <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Usuario"></i>
+                            <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Matrícula"></i>
+                            <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Matrícula"></i>
                         </p:column>
                     </p:dataTable>
                     <div class="EmptyBox20"></div>
-                    <p:commandButton value="Crear Usuario"></p:commandButton>
+                    <p:commandButton value="Matricular Alumno"></p:commandButton>
                     <p:commandButton value="Refrescar"></p:commandButton>
                 </h:form>
             </p:tab>
-            <p:tab title="Registro de Usuario">
+            <p:tab title="Registro de Matrícula de Alumno">
                 <h:form>
                     <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
                         <p:outputLabel value="Esta ayuda sirve un monton"/>
                     </p:dialog>
-                    <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
+                    <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>                    
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel value="Usuario: " class="Container10 Responsive"></p:outputLabel>
-                        <p:inputText  value="#{formatoPantallas.campo30}"></p:inputText>
-                        <p:outputLabel  value="Tipo de Usuario: " class="Container10 Responsive"></p:outputLabel>
-                        <p:selectOneMenu>
-                            <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo15}"></f:selectItem>
-                            <f:selectItem itemValue="1" itemLabel="Docente"></f:selectItem>
-                            <f:selectItem itemValue="2" itemLabel="Alumno"></f:selectItem>
-                        </p:selectOneMenu>
-                        <p:outputLabel  value="Nombre: " class="Container10 Responsive" ></p:outputLabel>
+                        <p:outputLabel value="Carnet: " class="Container10 Responsive"></p:outputLabel>
+                        <p:inputText value="#{formatoPantallas.carnet}"></p:inputText>
+                        <p:outputLabel  value="Nombre: " class="Container10 Responsive"></p:outputLabel>
                         <p:selectOneMenu  filter="true" filterMatchMode="contains">
                             <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo300}"></f:selectItem>
-                            <f:selectItem itemValue="1" itemLabel="Carmen"></f:selectItem>
-                            <f:selectItem itemValue="2"  itemLabel="Alicia"></f:selectItem>
+                            <f:selectItem itemValue="1" itemLabel="Rafael Antonio"></f:selectItem>
+                            <f:selectItem itemValue="2" itemLabel="Alberto Daniel"></f:selectItem>
                         </p:selectOneMenu>
-                    </p:panelGrid>
-                    <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Contraseña: " class=" Container10 Responsive"></p:outputLabel>
-                        <p:inputText  value="#{formatoPantallas.campo30}"></p:inputText>
-                        <p:outputLabel  value="Repetir Contraseña: " class=" Container10 Responsive"></p:outputLabel>
-                        <p:inputText  value="#{formatoPantallas.campo30}"></p:inputText>
+                        <p:outputLabel value="Grado: " class="Container10 Responsive" ></p:outputLabel>
+                        <p:selectOneMenu  filter="true" filterMatchMode="contains">
+                            <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo15}"></f:selectItem>
+                            <f:selectItem itemValue="1" itemLabel="8°"></f:selectItem>
+                            <f:selectItem itemValue="2" itemLabel="9°"></f:selectItem>
+                        </p:selectOneMenu>
+                        <p:outputLabel  value="Sección del grado: " class=" Container10 Responsive"></p:outputLabel>
+                        <p:selectOneMenu >
+                            <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo15}"></f:selectItem>
+                            <f:selectItem itemValue="1" itemLabel="B"></f:selectItem>
+                            <f:selectItem itemValue="2" itemLabel="C"></f:selectItem>
+                        </p:selectOneMenu>
                     </p:panelGrid>
                     <div class="EmptyBox20"></div>
                     <div class="Container100 Responsive">
@@ -92,7 +95,7 @@
                     </div>
                 </h:form>
             </p:tab>
-            <p:tab title="Modificar Usuario">
+            <p:tab title="Modificar Matrícula de Alumno">
                 <h:form>
                     <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
                         <p:outputLabel value="Esta ayuda sirve un monton"/>
@@ -100,26 +103,26 @@
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel value="Usuario: " class="Container10 Responsive"></p:outputLabel>
-                        <p:inputText  value="#{formatoPantallas.campo30}"></p:inputText>
-                        <p:outputLabel  value="Tipo de Usuario: " class="Container10 Responsive"></p:outputLabel>
-                        <p:selectOneMenu>
-                            <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo15}"></f:selectItem>
-                            <f:selectItem itemValue="1" itemLabel="Docente"></f:selectItem>
-                            <f:selectItem itemValue="2" itemLabel="Alumno"></f:selectItem>
-                        </p:selectOneMenu>
-                        <p:outputLabel  value="Nombre: " class="Container10 Responsive" ></p:outputLabel>
+                        <p:outputLabel value="Carnet: " class="Container10 Responsive"></p:outputLabel>
+                        <p:inputText value="#{formatoPantallas.carnet}"></p:inputText>
+                        <p:outputLabel  value="Nombre: " class="Container10 Responsive"></p:outputLabel>
                         <p:selectOneMenu  filter="true" filterMatchMode="contains">
                             <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo300}"></f:selectItem>
-                            <f:selectItem itemValue="1" itemLabel="Carmen"></f:selectItem>
-                            <f:selectItem itemValue="2"  itemLabel="Alicia"></f:selectItem>
+                            <f:selectItem itemValue="1" itemLabel="Rafael Antonio"></f:selectItem>
+                            <f:selectItem itemValue="2" itemLabel="Alberto Daniel"></f:selectItem>
                         </p:selectOneMenu>
-                    </p:panelGrid>
-                    <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Contraseña: " class=" Container10 Responsive"></p:outputLabel>
-                        <p:inputText  value="#{formatoPantallas.campo30}"></p:inputText>
-                        <p:outputLabel  value="Repetir Contraseña: " class=" Container10 Responsive"></p:outputLabel>
-                        <p:inputText  value="#{formatoPantallas.campo30}"></p:inputText>
+                        <p:outputLabel value="Grado: " class="Container10 Responsive" ></p:outputLabel>
+                        <p:selectOneMenu  filter="true" filterMatchMode="contains">
+                            <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo15}"></f:selectItem>
+                            <f:selectItem itemValue="1" itemLabel="8°"></f:selectItem>
+                            <f:selectItem itemValue="2" itemLabel="9°"></f:selectItem>
+                        </p:selectOneMenu>
+                        <p:outputLabel  value="Sección del grado: " class=" Container10 Responsive"></p:outputLabel>
+                        <p:selectOneMenu >
+                            <f:selectItem itemValue="0" itemLabel="#{formatoPantallas.campo15}"></f:selectItem>
+                            <f:selectItem itemValue="1" itemLabel="B"></f:selectItem>
+                            <f:selectItem itemValue="2" itemLabel="C"></f:selectItem>
+                        </p:selectOneMenu>
                     </p:panelGrid>
                     <div class="EmptyBox20"></div>
                     <div class="Container100 Responsive">
