--- a/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/gestionNotas/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/gestionNotas/index.xhtml
@@ -26,19 +26,14 @@
                                  rowsPerPageTemplate="5,10,15"
                                  reflow="true">
                         <p:column headerText="Alumno" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
-                            #{formatoPantallas.campo300}
                         </p:column>
                         <p:column headerText="Materia" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
-                            #{formatoPantallas.campo100}
                         </p:column>
                         <p:column headerText="Tipo de Evaluación" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
-                            #{formatoPantallas.campo100}
                         </p:column>
                         <p:column headerText="Nota" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
-                            #{formatoPantallas.numeroDecimal}
                         </p:column>
                         <p:column headerText="Tipo de ingreso" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
-                            #{formatoPantallas.campo15}
                         </p:column>
                         <p:column headerText="Acciones">
                             <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Nota"></i>
@@ -56,30 +51,29 @@
                         <p:outputLabel value="Esta ayuda sirve un monton"/>
                     </p:dialog>
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
-                    <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Alumno: " class="Container10 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class="Container10 Responsive" value="#{archivosMultimediaForm.estado}">
-                            <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo300}"/>
+                        <p:outputLabel for="alumno" value="Alumno: " class="Container10 Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="alumno" class="Container10 Responsive" value="#{archivosMultimediaForm.estado}">
+                            <f:selectItem itemValue ="1" itemLabel="Juanita Andrea Lopez"/>
                             <f:selectItem itemValue ="0" itemLabel="Pedro Vazques"/>
                         </p:selectOneMenu>
-                        <p:outputLabel value="Materia: " class="Container10 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class="Container10 Responsive" value="#{archivosMultimediaForm.estado}">
-                            <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo100}"/>
+                        <p:outputLabel for="materia" value="Materia: " class="Container10 Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="materia" class="Container10 Responsive" value="#{archivosMultimediaForm.estado}">
+                            <f:selectItem itemValue ="1" itemLabel="Matemáticas"/>
                             <f:selectItem itemValue="0" itemLabel="Ciencias"/>
                         </p:selectOneMenu>
-                        <p:outputLabel value="Evaluación: " class="Container10 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class="Container10 Responsive" value="#{archivosMultimediaForm.tipo}">
-                            <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo100}"/>
+                        <p:outputLabel for="tipoEval" value="Evaluación: " class="Container10 Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="tipoEval" class="Container10 Responsive" value="#{archivosMultimediaForm.tipo}">
+                            <f:selectItem itemValue ="0" itemLabel="Examen Trimestral Matemáticas"/>
                             <f:selectItem itemValue ="1" itemLabel="Examen Corto Matemáticas"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Nota: " class="Container10 Responsive"></p:outputLabel>
-                        <p:spinner min="0.0" value="#{formatoPantallas.numeroDecimal}"></p:spinner>
-                        <p:outputLabel  value="Tipo de ingreso: " class="Container10 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class="Container10 Responsive" value="#{archivosMultimediaForm.tipo}">
-                            <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo15}"/>
+                        <p:outputLabel for="nota" value="Nota: " class="Container10 Responsive"></p:outputLabel>
+                        <p:spinner id="nota" min="0.0" stepFactor="0.1" max="10.0"></p:spinner>
+                        <p:outputLabel for="tipoIngreso" value="Tipo de ingreso: " class="Container10 Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="tipoIngreso" class="Container10 Responsive" value="#{archivosMultimediaForm.tipo}">
+                            <f:selectItem itemValue ="0" itemLabel="Manual"/>
                             <f:selectItem itemValue ="1" itemLabel="Automático"/>
                         </p:selectOneMenu>  
                     </p:panelGrid>
@@ -106,30 +100,29 @@
                         <p:outputLabel value="Esta ayuda sirve un monton"/>
                     </p:dialog>
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
-                    <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Alumno: " class="Container10 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class="Container10 Responsive" value="#{archivosMultimediaForm.estado}">
-                            <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo300}"/>
+                        <p:outputLabel for="m_alumno" value="Alumno: " class="Container10 Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="m_alumno" class="Container10 Responsive" value="#{archivosMultimediaForm.estado}">
+                            <f:selectItem itemValue ="1" itemLabel="Juanita Andrea Lopez"/>
                             <f:selectItem itemValue ="0" itemLabel="Pedro Vazques"/>
                         </p:selectOneMenu>
-                        <p:outputLabel value="Materia: " class="Container10 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class="Container10 Responsive" value="#{archivosMultimediaForm.estado}">
-                            <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo100}"/>
+                        <p:outputLabel for="m_materia" value="Materia: " class="Container10 Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="m_materia" class="Container10 Responsive" value="#{archivosMultimediaForm.estado}">
+                            <f:selectItem itemValue ="1" itemLabel="Matemáticas"/>
                             <f:selectItem itemValue="0" itemLabel="Ciencias"/>
                         </p:selectOneMenu>
-                        <p:outputLabel value="Evaluación: " class="Container10 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class="Container10 Responsive" value="#{archivosMultimediaForm.tipo}">
-                            <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo100}"/>
+                        <p:outputLabel for="m_tipoEval" value="Evaluación: " class="Container10 Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="m_tipoEval" class="Container10 Responsive" value="#{archivosMultimediaForm.tipo}">
+                            <f:selectItem itemValue ="0" itemLabel="Examen Trimestral Matemáticas"/>
                             <f:selectItem itemValue ="1" itemLabel="Examen Corto Matemáticas"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Nota: " class="Container10 Responsive"></p:outputLabel>
-                        <p:spinner min="0.0" value="#{formatoPantallas.numeroDecimal}"></p:spinner>
-                        <p:outputLabel  value="Tipo de ingreso: " class="Container10 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class="Container10 Responsive" value="#{archivosMultimediaForm.tipo}">
-                            <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo15}"/>
+                        <p:outputLabel for="m_nota" value="Nota: " class="Container10 Responsive"></p:outputLabel>
+                        <p:spinner id="m_nota" min="0.0" stepFactor="0.1" max="10.0"></p:spinner>
+                        <p:outputLabel for="m_tipoIngreso" value="Tipo de ingreso: " class="Container10 Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="m_tipoIngreso" class="Container10 Responsive" value="#{archivosMultimediaForm.tipo}">
+                            <f:selectItem itemValue ="0" itemLabel="Manual"/>
                             <f:selectItem itemValue ="1" itemLabel="Automático"/>
                         </p:selectOneMenu>  
                     </p:panelGrid>
