--- a/SIENI/SIENI-web/src/main/webapp/view/formato/portalNoticias/gestionNoticias/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/portalNoticias/gestionNoticias/index.xhtml
@@ -7,14 +7,14 @@
     <ui:define name="breadCrumb">
         <p:breadCrumb>
             <p:menuitem value="Home" url="/"/>
-            <p:menuitem value="Gestionar Curso" url="#"/>
-            <p:menuitem value="Mantenimiento de Archivos multimedia" url="#{siteUrls.gestionArchivosMultimedia}"/>
+            <p:menuitem value="Portal de Noticias" url="#"/>
+            <p:menuitem value="Gestión de Noticias" url="#{siteUrls.gestionNoticia}"/>
             <p:separator />
         </p:breadCrumb>
     </ui:define>
     <ui:define name="content">
         <p:tabView>
-            <p:tab title="Consulta de Archivos Multimedia">
+            <p:tab title="Noticias Registradas">
                 <h:form>
                     <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
                         <p:outputLabel value="Esta ayuda sirve un monton"/>
@@ -25,27 +25,29 @@
                                  paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                  rowsPerPageTemplate="5,10,15"
                                  reflow="true">
-                        <p:column headerText="Nombre" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
-                            #{formatoPantallas.campo100}
+                        <p:column headerText="Usuario" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
+
+                        </p:column>
+                        <p:column headerText="Título" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
+
                         </p:column>
                         <p:column headerText="Estado" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
-                            #{formatoPantallas.campo15}
+
                         </p:column>
-                        <p:column headerText="Tipo" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
-                            #{formatoPantallas.campo15}
+                        <p:column headerText="Curso" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
+
                         </p:column>
                         <p:column headerText="Acciones">
-                            <i class="icon-list Fs25 Red" style="cursor: pointer" title="Ver Archivo Multimedia"></i>
-                            <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Archivo Multimedia"></i>
-                            <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Archivo Multimedia"></i>
+                            <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Noticia"></i>
+                            <i class="icon-close Fs25 Red" style="cursor: pointer" title="Eliminar Noticia"></i>
                         </p:column>
                     </p:dataTable>
                     <div class="EmptyBox20"></div>
-                    <p:commandButton value="Registrar Archivo Multimedia"></p:commandButton>
+                    <p:commandButton value="Crear Nueva Noticia"></p:commandButton>
                     <p:commandButton value="Refrescar"></p:commandButton>
                 </h:form>
             </p:tab>
-            <p:tab title="Registrar Archivo Multimedia">
+            <p:tab title="Registrar Nueva Noticia">
                 <h:form>
                     <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
                         <p:outputLabel value="Esta ayuda sirve un monton"/>
@@ -53,24 +55,26 @@
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Nombre: " class="Container10 Responsive"></p:outputLabel>
-                        <p:inputText value="#{formatoPantallas.campo100}"></p:inputText>
-                        <p:outputLabel  value="Estado: " class="Container10 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class="Container10 Responsive" value="#{archivosMultimediaForm.estado}">
-                            <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo15}"/>
-                            <f:selectItem itemValue="0" itemLabel="No Disponible"/>
+                        <p:outputLabel for="titulo" value="Título: " class="Container10 Responsive"></p:outputLabel>
+                        <p:inputText id="titulo" class="Container10 Responsive" value="#{archivosMultimediaForm.nombre}"></p:inputText>
+                        <p:outputLabel for="estado" value="Estado: " class="Container10 Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="estado" class="Container10 Responsive" value="#{archivosMultimediaForm.estado}">
+                            <f:selectItem itemValue ="1" itemLabel="Publicada"/>
+                            <f:selectItem itemValue="0" itemLabel="No Publicada"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Tipo: " class="Container10 Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="tipo" class="Container10 Responsive" value="#{archivosMultimediaForm.tipo}">
-                            <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo15}"/>
+                        <p:outputLabel for="curso" value="Curso: " class="Container10 Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="curso" class="Container10 Responsive" value="#{archivosMultimediaForm.tipo}">
+                            <f:selectItem itemValue ="0" itemLabel="Audio"/>
                             <f:selectItem itemValue ="1" itemLabel="Video"/>
                             <f:selectItem itemValue ="2" itemLabel="Imagen"/>
                         </p:selectOneMenu>
-                        <p:outputLabel  value="Archivo: " class="Container10 Responsive"></p:outputLabel>
+                        <p:outputLabel for="consulta" value="Noticia: " class="Container10 Responsive"></p:outputLabel>
+                        <p:editor id="consulta"></p:editor>
+                        <p:outputLabel value="Archivo"></p:outputLabel>
                         <p:fileUpload label="Buscar" cancelLabel="cancelar" uploadLabel="Subir archivo" multiple="false" mode="advanced" skinSimple="true" allowTypes="/(\.|\/)(jpg)$/" class="Container40 Responsive" value="#{archivosMultimediaForm.archivo}" >
-                        </p:fileUpload>  
+                        </p:fileUpload>
                     </p:panelGrid>
                     <div class="EmptyBox20"></div>
                     <div class="Container100 Responsive">
@@ -89,7 +93,7 @@
                     </div>
                 </h:form>
             </p:tab>
-            <p:tab title="Modificar Archivo Multimedia">
+            <p:tab title="Modificar Noticia">
                 <h:form>
                     <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
                         <p:outputLabel value="Esta ayuda sirve un monton"/>
@@ -97,24 +101,26 @@
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Nombre: " class="Container10 Responsive"></p:outputLabel>
-                        <p:inputText value="#{formatoPantallas.campo100}"></p:inputText>
-                        <p:outputLabel  value="Estado: " class="Container10 Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class="Container10 Responsive" value="#{archivosMultimediaForm.estado}">
-                            <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo15}"/>
-                            <f:selectItem itemValue="0" itemLabel="No Disponible"/>
+                        <p:outputLabel for="m_titulo" value="Título: " class="Container10 Responsive"></p:outputLabel>
+                        <p:inputText id="m_titulo" class="Container10 Responsive" value="#{archivosMultimediaForm.nombre}"></p:inputText>
+                        <p:outputLabel for="m_estado" value="Estado: " class="Container10 Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="m_estado" class="Container10 Responsive" value="#{archivosMultimediaForm.estado}">
+                            <f:selectItem itemValue ="1" itemLabel="Publicada"/>
+                            <f:selectItem itemValue="0" itemLabel="No Publicada"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
                     <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Tipo: " class="Container10 Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="tipo" class="Container10 Responsive" value="#{archivosMultimediaForm.tipo}">
-                            <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo15}"/>
+                        <p:outputLabel for="m_curso" value="Curso: " class="Container10 Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="m_curso" class="Container10 Responsive" value="#{archivosMultimediaForm.tipo}">
+                            <f:selectItem itemValue ="0" itemLabel="Audio"/>
                             <f:selectItem itemValue ="1" itemLabel="Video"/>
                             <f:selectItem itemValue ="2" itemLabel="Imagen"/>
                         </p:selectOneMenu>
-                        <p:outputLabel  value="Archivo: " class="Container10 Responsive"></p:outputLabel>
+                        <p:outputLabel for="m_consulta" value="Noticia: " class="Container10 Responsive"></p:outputLabel>
+                        <p:editor id="m_consulta"></p:editor>
+                        <p:outputLabel value="Archivo"></p:outputLabel>
                         <p:fileUpload label="Buscar" cancelLabel="cancelar" uploadLabel="Subir archivo" multiple="false" mode="advanced" skinSimple="true" allowTypes="/(\.|\/)(jpg)$/" class="Container40 Responsive" value="#{archivosMultimediaForm.archivo}" >
-                        </p:fileUpload>  
+                        </p:fileUpload>
                     </p:panelGrid>
                     <div class="EmptyBox20"></div>
                     <div class="Container100 Responsive">
@@ -132,6 +138,26 @@
                         </p:splitButton>
                     </div>
                 </h:form>
+            </p:tab>
+
+            <p:tab title="Ver Noticias">
+                <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
+                    <p:outputLabel value="Esta ayuda sirve un monton"/>
+                </p:dialog>
+                <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
+                <div class="EmptyBox20"></div>
+                <p:dataScroller value="#{clasesForm.plantillas}" var="noticia" >
+                    <p:panel  header="Clases suspendidas por paro de buses" closable="true">
+                        <p:outputLabel value="Las actividades escolares quedan suspendidas hasta nuevo aviso"></p:outputLabel>
+                        <div class="EmptyBox20"></div>
+                        <div class="Container73" style="cursor: pointer" >
+                            <i class="fa fa-file-movie-o Fs25"></i>
+                            <i class="fa fa-file-image-o Fs25"></i>
+                            <i class="fa fa-file-audio-o Fs25"></i>
+                        </div>
+                        <div class="EmptyBox20"></div>
+                    </p:panel>
+                </p:dataScroller>
             </p:tab>
         </p:tabView>
     </ui:define>
