--- a/SIENI/SIENI-web/src/main/webapp/view/portalNoticias/gestionNoticias/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/portalNoticias/gestionNoticias/index.xhtml
@@ -26,16 +26,16 @@
                                  rowsPerPageTemplate="5,10,15"
                                  reflow="true">
                         <p:column headerText="Usuario" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
-
+                            #{formatoPantallas.campo30}
                         </p:column>
                         <p:column headerText="Título" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
-
+                            #{formatoPantallas.campo100}
                         </p:column>
                         <p:column headerText="Estado" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
-
+                            #{formatoPantallas.campo15}
                         </p:column>
                         <p:column headerText="Curso" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
-
+                            #{formatoPantallas.campo100}
                         </p:column>
                         <p:column headerText="Acciones">
                             <i class="icon-compose Fs25 Red" style="cursor: pointer" title="Modificar Noticia"></i>
@@ -54,43 +54,108 @@
                     </p:dialog>
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel for="titulo" value="Título: " class="Container10 Responsive"></p:outputLabel>
-                    <p:inputText id="titulo" class="Container10 Responsive" value="#{archivosMultimediaForm.nombre}"></p:inputText>
+                    <p:panelGrid columns="2" class="Container50 Responsive">
+                        <p:outputLabel  value="Título: " class="Container10 Responsive"></p:outputLabel>
+                        <p:inputText class="Container10 Responsive" value="#{formatoPantallas.campo100}"></p:inputText>
+                        <p:outputLabel value="Estado: " class="Container10 Responsive"></p:outputLabel>
+                        <p:selectOneMenu  class="Container10 Responsive" value="#{archivosMultimediaForm.estado}">
+                            <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo15}"/>
+                            <f:selectItem itemValue="0" itemLabel="No Publicada"/>
+                        </p:selectOneMenu>
+                    </p:panelGrid>
+                    <p:panelGrid columns="2" class="Container50 Responsive">
+                        <p:outputLabel  value="Curso: " class="Container10 Responsive"></p:outputLabel>
+                        <p:selectOneMenu  class="Container10 Responsive" value="#{archivosMultimediaForm.tipo}">
+                            <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo100}"/>
+                            <f:selectItem itemValue ="1" itemLabel="Video"/>
+                            <f:selectItem itemValue ="2" itemLabel="Imagen"/>
+                        </p:selectOneMenu>
+                        <p:outputLabel value="Noticia: " class="Container10 Responsive"></p:outputLabel>
+                        <p:editor  value="#{formatoPantallas.campo4000}"></p:editor>
+                        <p:outputLabel value="Archivo"></p:outputLabel>
+                        <p:fileUpload label="Buscar" cancelLabel="cancelar" uploadLabel="Subir archivo" multiple="false" mode="advanced" skinSimple="true" allowTypes="/(\.|\/)(jpg)$/" class="Container40 Responsive" value="#{archivosMultimediaForm.archivo}" >
+                        </p:fileUpload>
+                    </p:panelGrid>
                     <div class="EmptyBox20"></div>
-                    <p:outputLabel for="estado" value="Estado: " class="Container10 Responsive"></p:outputLabel>
-                    <p:selectOneMenu id="estado" class="Container10 Responsive" value="#{archivosMultimediaForm.estado}">
-                        <f:selectItem itemValue ="1" itemLabel="Publicada"/>
-                        <f:selectItem itemValue="0" itemLabel="No Publicada"/>
-                    </p:selectOneMenu>
-                    <div class="EmptyBox20"></div>
-                    <p:outputLabel for="curso" value="Curso: " class="Container10 Responsive"></p:outputLabel>
-                    <p:selectOneMenu id="curso" class="Container10 Responsive" value="#{archivosMultimediaForm.tipo}">
-                        <f:selectItem itemValue ="0" itemLabel="Audio"/>
-                        <f:selectItem itemValue ="1" itemLabel="Video"/>
-                        <f:selectItem itemValue ="2" itemLabel="Imagen"/>
-                    </p:selectOneMenu>
-                    <div class="EmptyBox20"></div>
-                    <p:outputLabel for="consulta" value="Noticia: " class="Container10 Responsive"></p:outputLabel>
-                    <p:editor id="consulta"></p:editor>
-                    <div class="EmptyBox20"></div>
-                    <p:commandButton value="Guardar"/>
-                    <p:commandButton value="Limpiar"/>
-                    <p:commandButton value="Cancelar"/>
-                    <div class="EmptyBox20"></div>
-                    <p:splitButton value="Otras Opciones" action="#">
-                        <p:menuitem value="Gestionar Secciones">    
-                        </p:menuitem>
-                        <p:menuitem value="Programación de clases">    
-                        </p:menuitem>
-                        <p:menuitem value="Gestionar Clases">
-                        </p:menuitem>
-                    </p:splitButton>
+                    <div class="Container100 Responsive">
+                        <p:commandButton value="Guardar"/>
+                        <p:commandButton value="Limpiar"/>
+                        <p:commandButton value="Cancelar"/>
+                        <div class="EmptyBox20"></div>
+                        <p:splitButton value="Otras Opciones" action="#">
+                            <p:menuitem value="Gestionar Secciones">    
+                            </p:menuitem>
+                            <p:menuitem value="Programación de clases">    
+                            </p:menuitem>
+                            <p:menuitem value="Gestionar Clases">
+                            </p:menuitem>
+                        </p:splitButton>
+                    </div>
                 </h:form>
             </p:tab>
+            <p:tab title="Modificar Noticia">
+                <h:form>
+                    <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
+                        <p:outputLabel value="Esta ayuda sirve un monton"/>
+                    </p:dialog>
+                    <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
+                    <div class="EmptyBox20"></div>
+                    <p:panelGrid columns="2" class="Container50 Responsive">
+                        <p:outputLabel  value="Título: " class="Container10 Responsive"></p:outputLabel>
+                        <p:inputText class="Container10 Responsive" value="#{formatoPantallas.campo100}"></p:inputText>
+                        <p:outputLabel value="Estado: " class="Container10 Responsive"></p:outputLabel>
+                        <p:selectOneMenu  class="Container10 Responsive" value="#{archivosMultimediaForm.estado}">
+                            <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo15}"/>
+                            <f:selectItem itemValue="0" itemLabel="No Publicada"/>
+                        </p:selectOneMenu>
+                    </p:panelGrid>
+                    <p:panelGrid columns="2" class="Container50 Responsive">
+                        <p:outputLabel  value="Curso: " class="Container10 Responsive"></p:outputLabel>
+                        <p:selectOneMenu  class="Container10 Responsive" value="#{archivosMultimediaForm.tipo}">
+                            <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo100}"/>
+                            <f:selectItem itemValue ="1" itemLabel="Video"/>
+                            <f:selectItem itemValue ="2" itemLabel="Imagen"/>
+                        </p:selectOneMenu>
+                        <p:outputLabel value="Noticia: " class="Container10 Responsive"></p:outputLabel>
+                        <p:editor  value="#{formatoPantallas.campo4000}"></p:editor>
+                        <p:outputLabel value="Archivo"></p:outputLabel>
+                        <p:fileUpload label="Buscar" cancelLabel="cancelar" uploadLabel="Subir archivo" multiple="false" mode="advanced" skinSimple="true" allowTypes="/(\.|\/)(jpg)$/" class="Container40 Responsive" value="#{archivosMultimediaForm.archivo}" >
+                        </p:fileUpload>
+                    </p:panelGrid>
+                    <div class="EmptyBox20"></div>
+                    <div class="Container100 Responsive">
+                        <p:commandButton value="Guardar"/>
+                        <p:commandButton value="Limpiar"/>
+                        <p:commandButton value="Cancelar"/>
+                        <div class="EmptyBox20"></div>
+                        <p:splitButton value="Otras Opciones" action="#">
+                            <p:menuitem value="Gestionar Secciones">    
+                            </p:menuitem>
+                            <p:menuitem value="Programación de clases">    
+                            </p:menuitem>
+                            <p:menuitem value="Gestionar Clases">
+                            </p:menuitem>
+                        </p:splitButton>
+                    </div>
+                </h:form>
+            </p:tab>
+
             <p:tab title="Ver Noticias">
+                <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
+                    <p:outputLabel value="Esta ayuda sirve un monton"/>
+                </p:dialog>
+                <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
+                <div class="EmptyBox20"></div>
                 <p:dataScroller value="#{clasesForm.plantillas}" var="noticia" >
-                    <p:panel  header="Clases suspendidas por paro de buses" closable="true">
-                        <p:outputLabel value="Las actividades escolares quedan suspendidas hasta nuevo aviso"></p:outputLabel>
+                    <p:panel  header="#{formatoPantallas.campo100}" closable="true">
+                        <p:outputLabel value="#{formatoPantallas.campo4000}"></p:outputLabel>
+                        <div class="EmptyBox20"></div>
+                        <div class="Container73" style="cursor: pointer" >
+                            <i class="fa fa-file-movie-o Fs25"></i>
+                            <i class="fa fa-file-image-o Fs25"></i>
+                            <i class="fa fa-file-audio-o Fs25"></i>
+                        </div>
+                        <div class="EmptyBox20"></div>
                     </p:panel>
                 </p:dataScroller>
             </p:tab>
